--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4562,10 +4562,11 @@ input[type="button"].btn-block {
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
-  /*margin-top: 10px;*/
-  margin: 0 auto; /* Added */
-  float: none; /* Added */
-  margin-bottom: 10px; /* Added */
+  margin-top: 10px;
+  margin-right: auto;
+  margin-left: auto;
+  float: none;
+  margin-bottom: 10px;
   height: 365px;
   overflow: hidden;
 }
@@ -4660,6 +4661,8 @@ input[type="button"].btn-block {
 
 .card-img {
   width: 100%;
+  height: 100px;
+  object-fit: cover;
   border-radius: calc(0.25rem - 1px);
 }
 
