--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,106 @@
     height: 50px;
 }
 
+.prijs {
+    width: 100px;
+    float:right;
+    margin-top: 7px;
+    margin-right: -30px;
+}
+
+.socialicon {
+    margin-top: 10px;
+    display: inline-block;
+}
+
+
+.fa-facebook-f {
+    background: #3B5998;
+    color: white;
+    padding: 10px;
+    width: 35px;
+    font-size: 15px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    border-radius: 50%;
+}
+
+.fa-facebook-f:hover {
+    opacity: 0.7;
+}
+
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+    padding: 10px;
+    width: 35px;
+    font-size: 15px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    border-radius: 50%;
+}
+
+.fa-twitter:hover {
+    opacity: 0.7;
+}
+
+.fa-google {
+    background: #dd4b39;
+    color: white;
+    padding: 10px;
+    width: 35px;
+    font-size: 15px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    border-radius: 50%;
+}
+
+.fa-google:hover {
+    opacity: 0.7;
+}
+
+.fa-envelope {
+    background: #8CA989;
+    color: white;
+    padding: 10px;
+    width: 35px;
+    font-size: 15px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    border-radius: 50%;
+}
+
+h2 {
+    font-size: 20px;
+}
+
+.fa-envelope:hover {
+    opacity: 0.7;
+}
+
+.fa-trash:hover {
+    color: #007bff;
+}
+
+.fa-cart-plus:hover {
+    color: #007bff;
+}
+
+p.textfooter {
+    color:white;
+    margin:0;
+}
+
 footer {
     bottom: 0;
     background-color: #007bff;
-    height: 50px;
+    height: 80px;
+    text-align: center;
+    margin-top: 10px;
 }
+
+
